--- a/app/src/main/res/layout/fragment_draw.xml
+++ b/app/src/main/res/layout/fragment_draw.xml
@@ -5,6 +5,7 @@
     android:layout_height="match_parent">
 
     <com.mrindeciso.stylusview.StylusView
+        android:id="@+id/stylusView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
