--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.Drafter" parent="Theme.MaterialComponents.Light.DarkActionBar">
+    <style name="Theme.Drafter" parent="Theme.MaterialComponents.Light.NoActionBar">
         <item name="android:forceDarkAllowed" tools:targetApi="Q">false</item>
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_200</item>
